Use a VerticalGridView in order to show data from a test data source.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">News App</string>
+    <string name="app_name">Guardian News</string>
+    <string name="guardian_api_key">Type in your Guardian API key.</string>
 </resources>
