* Ask for Internet permission.
* Create a template for an input field for the API key and a template for a button in order to download the News using the API key from the input field.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Guardian News</string>
     <string name="guardian_api_key">Type in your Guardian API key.</string>
+    <string name="button_load_data">Get news</string>
 </resources>
